<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <Space
        android:layout_width="match_parent"
        android:layout_height="147dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_title"
        android:textAlignment="center"
        android:textSize="30sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="62dp" />

    <RadioGroup
        android:id="@+id/rdGroup1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <RadioButton
            android:id="@+id/rbtnPaper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:checked="false"
            android:text="@string/paper"
            android:textAlignment="center"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/rdbtnScissors"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:text="@string/scissors"
            android:textAlignment="center"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/rbtnRock"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:text="@string/rock"
            android:textAlignment="center"
            android:textSize="18sp" />

    </RadioGroup>

    <Space
        android:layout_width="match_parent"
        android:layout_height="75dp" />

    <Button
        android:id="@+id/btnPlay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/play" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>