<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/playLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_grey"
    android:orientation="vertical"
    android:padding="@dimen/box_inset_layout_padding"
    tools:context=".PlayActivity">

    <Space
        android:layout_width="match_parent"
        android:layout_height="194dp" />

    <LinearLayout
        android:id="@+id/titleLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/your_move"
            android:textAlignment="center"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cpu_move"
            android:textAlignment="center"
            android:textSize="18sp" />

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <LinearLayout
        android:id="@+id/moveLayout"
        android:layout_width="match_parent"
        android:layout_height="47dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtPlayer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="center"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/txtCPU"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="center"
            android:textSize="18sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/txtOutput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="30sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="57dp" />

    <Button
        android:id="@+id/btnPlayAgain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/play_again" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

</LinearLayout>